--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -1,26 +1,25 @@
 /*--------------------------------------------------------------
 # About Page
 --------------------------------------------------------------*/
+.about-banner{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	.site-logo,.about-title,p{
+		display: none;
+	}
+	.about-header{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
 
 h3 {
 	margin: 0;
 	padding: 1rem 0;
-}
-
-.about-page-container {
-	max-width: 1000px;
-	display: flex;
-	flex-flow: column nowrap;
-	align-items: center;
-}
-
-.about-page-banner{
-	display: none;
-	width: 100vw;
-	img {
-		max-width: 100%;
-		width: 100vw;
-	}
 }
 
 // author section
@@ -208,6 +207,38 @@ h3 {
 // breakpoints
 
 	@media all and (min-width: 600px) {
+		
+		.about-banner{
+	    background: url(../../images/about-page-banner.png) no-repeat center left;
+	    background-size: cover;
+	    height: 70vh;
+	    overflow: hidden;
+	    position: relative;
+    .site-logo{
+      display: unset;
+      max-width: 250px;
+    }
+    .about-title{
+    	display: unset;
+      color:#fff;
+      border-bottom: solid 2px #fff;
+      border-top: solid 2px #fff;
+      font-size: 1.5rem;
+      padding:10px 0;
+      width: 250px;
+      text-transform: capitalize;
+      font-weight: 500;
+      text-align: center;
+    }
+    p{
+    	display: unset;
+    	color: #fff;
+    	font-weight: 300;
+    }
+  }
+
+
+
 		.about-page-banner{
 			display: block;
 		}
