replace code for front-model.scss

--- a/themes/bix/sass/front-sections/_front-model.scss
+++ b/themes/bix/sass/front-sections/_front-model.scss
@@ -3,6 +3,8 @@
   Our Modal Window styles
 =====================================*/
 .modal {
+  background: #fff;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
   display: inline-block;
   padding: 1em;
 }
@@ -12,15 +14,10 @@
   }
 }
 .modal > label {
-<<<<<<< HEAD:themes/bix/sass/front-sections/_front-model.scss
-  background: red;
+  background: #F9AC31;
   border: 1px solid #f0c600;
   border-radius: .2em;
-  color: #000000;
-=======
-  border-radius: .2em;
-  color: #70b3cb;
->>>>>>> modal paragraph styling:themes/bix/sass/_modal-download.scss
+  color: white;
   cursor: pointer;
   display: inline-block;
   font-weight: bold;
@@ -32,7 +29,7 @@
   transform: scale(0.97);
 }
 .modal__overlay {
-  background: red;
+  background: #F9AC31;
   bottom: 0;
   left: 0;
   position: fixed;
@@ -57,32 +54,44 @@
 @media (min-height: 37.5em) {
   .modal__wrap {
     left: 50%;
+    position: absolute;
     top: 50%;
     transform: translate(-50%, -80%);
   }
 }
 .modal__wrap label {
-  background: #FFF;
+  background: #FFD300;
   border-radius: 50%;
   color: #000000;
   cursor: pointer;
   display: inline-block;
   height: 1.5em;
   line-height: 1.5;
+  position: absolute;
   right: .5em;
   top: .5em;
   width: 1.5em;
 }
 .modal__wrap h2 {
-  color: #FFD300;
-  margin-bottom: 1em;
+  line-height: 50px;
+  color: white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
   text-transform: uppercase;
 }
 .modal__wrap p {
-  color: #FFD300;
+  display: inline;
+  color: #FFF;
   text-align: justify;
 }
+.modal input:focus ~ label {
+  transform: scale(0.97);
+}
 
+.model input {
+  position: absolute;
+  top: -1000px;
+}
 
 .modal__overlay {
   opacity: 0;
@@ -90,8 +99,6 @@
   transition: all 0.75s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   z-index: -100;
 }
-<<<<<<< HEAD:themes/bix/sass/front-sections/_front-model.scss
-=======
 
 .modal input:checked ~ .modal__overlay {
   opacity: 1;
@@ -105,16 +112,12 @@
 }
 
 .email-unlock {
-    box-shadow: none;
-    text-shadow: none;
     margin-top: 5px;
     width: 80%;
     height: 11vh;
 }
 
 button {
-  box-shadow: none;
-  text-shadow: none;
   padding: 10px;
   margin-top: 10px;
   color: #fff;
@@ -130,8 +133,3 @@ button {
     background-color: #ffffff;
     color: #70b3cb;
 }
-
-.blue-books {
-  color:#70b3cb;
-}
->>>>>>> modal paragraph styling:themes/bix/sass/_modal-download.scss
