bix-book page fixes

--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -460,7 +460,7 @@
     .book-purchase-info{
       padding:0 50px;
       .book-buy{
-        text-align: left;
+        text-align: left;   
       }
     }
   }
@@ -481,3 +481,4 @@
   .book-purchase{
     width: 100%;
   }
+}
