--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -53,7 +53,7 @@
 //desktop styling hidden for mobile
 .ribbon, .ribbon-heading{
   display: none;
-  padding: 100px 0;
+  padding: 0;
 
 	.book-section1-inside{
 		padding: 5px 20px;
@@ -331,8 +331,7 @@
       left: 23px;
       font-weight: 500;
       font-size: 1.5rem;
-      text-transform: uppercase;
-      
+      text-transform: uppercase;  
     }
     .book-section1-inside{
       padding:0 50px;
