--- a/themes/bix/sass/front-sections/_front-model.scss
+++ b/themes/bix/sass/front-sections/_front-model.scss
@@ -24,7 +24,7 @@
   display: inline-block;
   font-weight: bold;
   padding: 0.75em 1.5em;
-  text-shadow: 1px 1px 1px #fff;
+  //text-shadow: 1px 1px 1px #fff;
   transition: all 0.55s;
 }
 .modal > label:hover {
@@ -110,9 +110,10 @@
 }
 
 .modal__trigger {
-    position: absolute;
-    top: -1000px;
-}
+    // position: absolute;
+    // top: -1000px;
+    display: none;
+  }
 
 .email-unlock {
     margin-top: 5px;
