--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1877,6 +1877,8 @@ strong {
         background: #F9AC31; }
 
 @media all and (min-width: 600px) {
+  .single-story-container .entry-header h2 {
+    font-size: 2.1rem; }
   .single-story-container .entry-header h1.entry-title {
     font-size: 2.2rem;
     font-weight: bold; }
@@ -1884,19 +1886,25 @@ strong {
     min-width: 100%; }
   .single-story-container .story-number {
     display: none; }
-  .single-story-container .story-content {
+  .single-story-container .story-content .top-section-border {
     padding: 3rem 4rem;
     border: 1px solid rgba(0, 0, 0, 0.3);
-    border-top: 0; }
-    .single-story-container .story-content p {
-      margin: 0 2rem 1rem 2rem; }
-    .single-story-container .story-content .practice-block {
-      font-size: 2.2rem; }
-      .single-story-container .story-content .practice-block h2.practice-title {
-        font-size: 2.2rem;
-        padding: 0 5vw; }
-      .single-story-container .story-content .practice-block hr {
-        width: 15vw; } }
+    border-top: 0;
+    margin-bottom: 4rem; }
+  .single-story-container .story-content .mid-section-border {
+    padding: 3rem 4rem;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 4rem; }
+  .single-story-container .story-content p {
+    margin: 0 2rem 1rem 2rem; }
+  .single-story-container .story-content .practice-block {
+    padding: 0 2rem;
+    font-size: 2.2rem; }
+    .single-story-container .story-content .practice-block h2.practice-title {
+      font-size: 2.2rem;
+      padding: 0 5vw; }
+    .single-story-container .story-content .practice-block hr {
+      width: 15vw; } }
 
 /* ----------------- Top Section - Banner -------------*/
 .bix-book-banner {
