add icons to modal

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -73,3 +73,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "footer";
 @import "media-queries";
 @import "front-sections/front-model";
+@import "social-media-modal";
