--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -1,12 +1,18 @@
 /*--------------------------------------------------------------
 # Single Story
 --------------------------------------------------------------*/
+.single-story-site {
+	.stories-banner{
+		display: none;
+	}
+}
+
 .single-story-container{
 	min-width: 320px;
 
 	.entry-header {
 		height: 100vh;
-		background: rgba(0,0,0,0.5);
+		//background: rgba(0,0,0,0.5);
 		position: relative;
 		font-family: $font__header;
 		text-transform: uppercase;
@@ -14,9 +20,16 @@
 		h2 {
 			font-size: 21px;
 			position: absolute;
-			top: 2vh;
-			left: 5vw;
+			top: 23px;
+			left: 30px;
 			font-weight: 400;
+		}
+
+		.stories-ribbon {
+			position: absolute;
+			top: 30px;
+			left: -45px;
+			z-index: -2;
 		}
 
 		h1.entry-title {
@@ -36,9 +49,10 @@
 			justify-content: center;
 			align-items: center;
 
-			img {
+			img.wp-post-image {
 				min-height: 100%;
 				max-width: none;
+				z-index: -3;
 			}
 		}
 	}
@@ -94,20 +108,63 @@
 
 }
 
+.bottom-toolbar-container {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	.bottom-toolbar-wrapper {
+		position: absolute;
+		width: 100%;
+		height: 60px;
+		background: white;
+		bottom: 80px;
+		border: 2px solid $color__blue;
+		border-left: 0;
+		border-right: 0;
+		z-index: 3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		.bottom-toolbar {
+			background: gray;
+			height: 100%;
+			width: 100%;
+			max-width: 1024px;
+		}
+	}
+	.bottom-toolbar-wrapper-slide-up {
+		bottom: 100px;
+	}
+}
+
 // breakpoints
 
 @media all and (min-width: 600px) {
 
+	.single-story-site {
+		.stories-banner{
+			display: flex;
+		}
+	}
+
 	.single-story-container {
 		.entry-header {
+			height: 80vh;
+			.stories-ribbon {
+				position: absolute;
+				top: 50px;
+				left: -45px;
+			}
 			h2 {
 				font-size: 2.1rem;
 			}
 			h1.entry-title {
+				top: 60vh;
 				font-size: 2.2rem;
 				font-weight: bold;
 			}
-			img {
+			img.wp-post-image {
 				min-width: 100%;
 			}
 		}
