--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2395,6 +2395,9 @@ strong {
   text-align: center;
   overflow: hidden; }
 
+.footer-wrapper {
+  position: relative; }
+
 .footer-top {
   margin-left: 10%;
   text-align: left; }
@@ -2404,6 +2407,8 @@ strong {
   font-weight: 300;
   color: #ffffff;
   text-transform: uppercase; }
+  .footer-top h2:nth-child(3) {
+    line-height: 0px; }
 
 .footer-top h1 {
   font-family: "Titillium Web", sans-serif;
@@ -2414,13 +2419,15 @@ strong {
 .form-position input {
   width: 80%;
   border: #F9AC31 solid 2px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  padding-left: 10px; }
 
 .form-position textarea {
   margin-left: 1px;
   width: 80%;
   height: 40vh;
-  border: #F9AC31 solid 2px; }
+  border: #F9AC31 solid 2px;
+  padding-left: 10px; }
 
 .footer_button {
   color: #fff;
@@ -2431,8 +2438,8 @@ strong {
   font-weight: 500;
   font-size: 1.1rem;
   font-size: 12px;
-  width: 30%;
-  height: 4vh;
+  width: 100px;
+  padding: 5px;
   text-align: center;
   box-shadow: none;
   text-shadow: none; }
@@ -2451,10 +2458,11 @@ strong {
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
-  -ms-flex-pack: center;
-      justify-content: center;
-  margin-top: 3%;
-  margin-bottom: 1%; }
+  -ms-flex-pack: start;
+      justify-content: flex-start;
+  margin: 10px 0px 20px 10%; }
+  .icons .fa-stack {
+    font-size: 1.8rem; }
 
 .icon-background {
   color: white; }
@@ -2462,7 +2470,7 @@ strong {
 .footer-orange {
   color: #F9AC31; }
 
-@media all and (min-width: 600px) {
+@media (min-width: 700px) {
   .footer-form {
     display: -ms-flexbox;
     display: flex;
@@ -2474,9 +2482,24 @@ strong {
   .form-position textarea {
     height: 40vh; }
   .icons {
-    -ms-flex-pack: start;
-        justify-content: flex-start;
-    margin-left: 15%; } }
+    position: absolute;
+    bottom: 75px;
+    left: 30px; } }
+
+@media (min-width: 900px) {
+  .icons {
+    left: 35px; }
+  .footer_button {
+    font-size: 1rem;
+    padding: 10px;
+    width: 185px; } }
+
+@media (min-width: 1024px) {
+  .footer-wrapper {
+    max-width: 1024px;
+    margin: 0 auto; }
+  .icons {
+    left: 40px; } }
 
 /*====================================
   Our Modal Window styles
