--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1890,11 +1890,12 @@ strong {
   height: 100vh;
   top: 0; }
   .bottom-toolbar-container .bottom-toolbar-wrapper {
+    transition: 1s;
     position: absolute;
     width: 100%;
     height: 60px;
     background: white;
-    bottom: 80px;
+    bottom: -60px;
     border: 2px solid #70b3cb;
     border-left: 0;
     border-right: 0;
@@ -1906,12 +1907,15 @@ strong {
     -ms-flex-align: center;
         align-items: center; }
     .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar {
-      background: gray;
+      border-style: solid;
+      border-width: 0 2px;
+      border-color: #F9AC31;
       height: 100%;
       width: 100%;
       max-width: 1024px; }
   .bottom-toolbar-container .bottom-toolbar-wrapper-slide-up {
-    bottom: 100px; }
+    transition: 1s;
+    bottom: 50px; }
 
 @media all and (min-width: 600px) {
   .single-story-site .stories-banner {
