--- a/themes/bix/sass/_social-media-modal.scss
+++ b/themes/bix/sass/_social-media-modal.scss
@@ -20,8 +20,8 @@
 
 .icon-size {
   display:inline-block;
-  color: #FFFFFF;
-
+  background-color: #ffffff;
+  color: #F9AC31;
   font-size: 50px;
   line-height: 100px;
   border: 7px solid #FFFFFF;
