--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1893,10 +1893,10 @@ strong {
     transition: 1s;
     position: absolute;
     width: 100%;
-    height: 60px;
+    height: 70px;
     background: white;
-    bottom: -60px;
-    border: 2px solid #70b3cb;
+    bottom: -70px;
+    border: 1px solid #70b3cb;
     border-left: 0;
     border-right: 0;
     z-index: 3;
@@ -1907,12 +1907,28 @@ strong {
     -ms-flex-align: center;
         align-items: center; }
     .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar {
-      border-style: solid;
-      border-width: 0 2px;
-      border-color: #F9AC31;
       height: 100%;
       width: 100%;
-      max-width: 1024px; }
+      max-width: 1024px;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+      -ms-flex-align: center;
+          align-items: center; }
+      .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar .next-story {
+        border-left: solid 1px #70b3cb;
+        padding: 0 20px;
+        font-family: "Titillium Web", sans-serif; }
+        .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar .next-story p {
+          margin: 0;
+          padding: 0; }
+        .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar .next-story a {
+          text-decoration: none;
+          text-transform: uppercase;
+          color: #70b3cb; }
+          .bottom-toolbar-container .bottom-toolbar-wrapper .bottom-toolbar .next-story a:hover {
+            color: #F9AC31; }
   .bottom-toolbar-container .bottom-toolbar-wrapper-slide-up {
     transition: 1s;
     bottom: 50px; }
