--- a/themes/bix/sass/_single-story.scss
+++ b/themes/bix/sass/_single-story.scss
@@ -109,6 +109,7 @@
 }
 
 .bottom-toolbar-container {
+	display: none;
 	position: fixed;
 	width: 100%;
 	height: 100vh;
@@ -227,6 +228,9 @@
 				}
 			}
 		}
+	}
+	.bottom-toolbar-container {
+		display: block;
 	}
 
 
