--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -631,7 +631,7 @@ textarea {
     border-bottom: solid 1px rgba(0, 0, 0, 0.2);
     z-index: 99; }
   .desktop-nav-wrapper .main-navigation {
-    max-width: 1000px;
+    max-width: 1024px;
     -ms-flex-pack: center;
         justify-content: center;
     height: auto;
@@ -1885,6 +1885,7 @@ strong {
         background: #F9AC31; }
 
 .bottom-toolbar-container {
+  display: none;
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -1977,7 +1978,9 @@ strong {
       font-size: 2.2rem;
       padding: 0 5vw; }
     .single-story-container .story-content .practice-block hr {
-      width: 15vw; } }
+      width: 15vw; }
+  .bottom-toolbar-container {
+    display: block; } }
 
 /* ----------------- Top Section - Banner -------------*/
 .bix-book-banner {
