button style inverse color to comp

--- a/themes/bix/sass/front-sections/_front-model.scss
+++ b/themes/bix/sass/front-sections/_front-model.scss
@@ -3,6 +3,7 @@
   Our Modal Window styles
 =====================================*/
 .modal {
+  text-transform: capitalize;
   background: #fff;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
   display: inline-block;
@@ -75,6 +76,7 @@
   width: 1.5em;
 }
 .modal__wrap h2 {
+  text-transform: capitalize;
   line-height: 50px;
   color: white;
   border-top: 2px solid white;
@@ -82,6 +84,7 @@
   text-transform: uppercase;
 }
 .modal__wrap p {
+  text-transform: capitalize;
   display: inline;
   color: #FFF;
   text-align: justify;
@@ -135,6 +138,14 @@
   box-shadow: none;
   text-shadow: none;
   width: 50%;
+}
+
+.modal-button:hover{
+  text-shadow: none;
+  box-shadow: none;
+  background-color: #ffffff;
+  border: solid #70b3cb 2px;
+  color: #70b3cb;
 }
 
 
