--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -88,6 +88,8 @@ h3 {
 				display: flex;
 				flex-flow: column nowrap;
 				justify-content: center;
+				display: block;
+				width: 100%;
 				span{
 					margin-bottom: 1rem;
 				}
@@ -201,8 +203,6 @@ h3 {
 			color: $color__blue;
 		}
 	}
-
-// border: 1px solid rgba(0,0,0,0.3);
 
 // breakpoints
 
